--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxtjs/supabase": "^1.4.6",
     "@nuxtjs/tailwindcss": "^6.13.1",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
