--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nuxt": "^3.15.4",
     "v-calendar": "^3.1.2",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@nuxtjs/supabase": "^1.4.6",
