--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "tree": "find . -maxdepth 4 \\( -type d -o -type f \\) ! -path \"./.*\" ! -path \"./node_modules*\" ! -path \"./public*\" ! -path \"./assets*\" | sed -e \"s/[^-][^\\/]*\\// |/g\" -e \"s/|\\([^ ]\\)/|-\\1/\" > PROJECT_TREE.md"
+    "tree": "find . -maxdepth 4 \\( -type d -o -type f \\) ! -path \"./.*\" ! -path \"./node_modules*\" ! -path \"./public*\" ! -path \"./assets*\" ! -path \"./dist*\" | sed -e \"s/[^-][^\\/]*\\// |/g\" -e \"s/|\\([^ ]\\)/|-\\1/\" > PROJECT_TREE.md"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
